--- a/my_class.html
+++ b/my_class.html
@@ -121,16 +121,16 @@
           </div>
           <!-- header -->
           <div class="header">
-            <div class="header-image">
-              <div class="header-image-item monster01"></div>
+            <div class="header-image monster01">
+              <img class="header-image-item" src="images/monster01.png" />
             </div>
             <div class="header-level">
               <div class="header-level-image"></div>
               <div class="header-level-title">你的學習等級</div>
               <div class="header-level-text">一年級</div>
             </div>
-            <div class="header-image">
-              <img class="header-image-item monster02" src='images/monster02.png'></img>
+            <div class="header-image monster02">
+              <img class="header-image-item" src="images/monster02.png" />
             </div>
             <div class="header-action">
               <span class="header-action-item">修改計畫</span>
