Update lesson unit info part

--- a/my_class.html
+++ b/my_class.html
@@ -440,10 +440,43 @@
           <!-- lesson -->
           <div class="lesson">
             <span class="lesson-title">9月課程</span>
+            <!-- carousel -->
             <div class="lesson-carousel">
               <div class="lesson-carousel-icon previous"></div>
               <div class="lesson-carousel-icon next"></div>
             </div>
+
+            <!-- carousel -->
+            <div class="lesson-unit">
+              <div class="lesson-unit-info">
+                <img class="lesson-unit-image" src='images/m_head.svg'/>
+                <div class="lesson-unit-info-title">
+                  <p class="lesson-unit-info-title-text">
+                    本周計畫單元
+                  </p>
+                </div>
+                <div class="lesson-unit-info-content">
+                  <p class="lesson-unit-info-content-title">
+                    Alphabet Fun
+                  </p>
+                  <p class="lesson-unit-info-content-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="lesson-unit-course">
+              <div class="course">
+                <div class="course-info">
+                已出席
+                </div>
+                <div class="course-card">
+                  一年級   45 mins   CCSS   一對四
+              </div>
+            </div>
+              
+           
           </div>
         </div>
       </div>
