Add lesson course parts

--- a/my_class.html
+++ b/my_class.html
@@ -447,7 +447,7 @@
               <div class="lesson-carousel-icon next"></div>
             </div>
 
-            <!-- carousel -->
+            <!-- lesson-unit -->
             <div class="lesson-unit">
               <div class="lesson-unit-info">
                 <img class="lesson-unit-image" src="images/m_head.svg" />
@@ -464,14 +464,245 @@
                   </p>
                 </div>
               </div>
-            </div>
-            <div class="lesson-unit-course">
-              <div class="course">
-                <div class="course-info">
-                  <img src="images/check.svg" />
-                  <p>已出席</p>
+              <div class="lesson-unit-course">
+                <div class="course">
+                  <div class="course-info">
+                    <div class="course-info-content">
+                      <div class="course-info-content-status">
+                        <div class="course-info-content-status-check">
+                          <img src="images/check.svg" />
+                        </div>
+                        <p class="course-info-content-status-text">已出席</p>
+                      </div>
+                      <div class="course-info-content-time">
+                        <p class="date">2021/9/18</p>
+                        <p class="time">18:30</p>
+                      </div>
+                    </div>
+                    <div class="course-info-divider"></div>
+                  </div>
+                  <div class="course-card">
+                    <div class="course-card-info">
+                      <div class="course-card-info-image">
+                        <img src="images/course_img.png" />
+                      </div>
+                      <div class="course-card-info-content">
+                        <div class="course-card-info-content-tag">
+                          <p>一年級</p>
+                          <p>45 mins</p>
+                          <p>CCSS</p>
+                          <p>一對四</p>
+                        </div>
+                        <p class="course-card-info-content-text">
+                          Conversation About: Meeting New People
+                        </p>
+                        <div class="course-card-info-content-teacher">
+                          <div class="course-card-info-content-teacher-avatar">
+                            <img src="images/teacher_img.png" />
+                          </div>
+                          <p class="course-card-info-content-teacher-name">
+                            Karla C
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="course-card-action">
+                      <button class="button xs">
+                        <img class="button-icon" src="images/btn_hw.svg" />
+                        <p>課後作業</p>
+                      </button>
+                      <button class="button xs">
+                        <img class="button-icon" src="images/btn_review.svg" />
+                        <p>複習課程</p>
+                      </button>
+                      <button class="button s">
+                        <img class="button-icon" src="images/btn_again.svg" />
+                        <p>再學一次</p>
+                      </button>
+                    </div>
+                  </div>
                 </div>
-                <div class="course-card">一年級 45 mins CCSS 一對四</div>
+
+                <div class="course" data-is-attend="false">
+                  <div class="course-info">
+                    <div class="course-info-content">
+                      <div class="course-info-content-status">
+                        <div class="course-info-content-status-check">
+                          <img src="images/check.svg" />
+                        </div>
+                        <p class="course-info-content-status-text">已出席</p>
+                      </div>
+                      <div class="course-info-content-time">
+                        <p class="date">2021/9/18</p>
+                        <p class="time">18:30</p>
+                      </div>
+                    </div>
+                    <div class="course-info-divider"></div>
+                  </div>
+                  <div class="course-card">
+                    <div class="course-card-info">
+                      <div class="course-card-info-image">
+                        <img src="images/course_img.png" />
+                      </div>
+                      <div class="course-card-info-content">
+                        <div class="course-card-info-content-tag">
+                          <p>一年級</p>
+                          <p>45 mins</p>
+                          <p>CCSS</p>
+                          <p>一對四</p>
+                        </div>
+                        <p class="course-card-info-content-text">
+                          Conversation About: Meeting New People
+                        </p>
+                        <div class="course-card-info-content-teacher">
+                          <div class="course-card-info-content-teacher-avatar">
+                            <img src="images/teacher_img.png" />
+                          </div>
+                          <p class="course-card-info-content-teacher-name">
+                            Karla C
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="course-card-action">
+                      <button class="button xs">
+                        <img class="button-icon" src="images/btn_hw.svg" />
+                        <p>課後作業</p>
+                      </button>
+                      <button class="button xs">
+                        <img class="button-icon" src="images/btn_review.svg" />
+                        <p>複習課程</p>
+                      </button>
+                      <button class="button s">
+                        <img class="button-icon" src="images/btn_again.svg" />
+                        <p>再學一次</p>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="lesson-enhance">
+              <div class="lesson-enhance-title">
+                <p class="lesson-enhance-title-text">本週加強課程</p>
+              </div>
+              <div class="lesson-enhance-course">
+                <div class="course dark">
+                  <div class="course-info">
+                    <div class="course-info-content">
+                      <div class="course-info-content-status">
+                        <div class="course-info-content-status-check">
+                          <img src="images/check.svg" />
+                        </div>
+                        <p class="course-info-content-status-text">已出席</p>
+                      </div>
+                      <div class="course-info-content-time">
+                        <p class="date">2021/9/18</p>
+                        <p class="time">18:30</p>
+                      </div>
+                    </div>
+                    <div class="course-info-divider"></div>
+                  </div>
+                  <div class="course-card">
+                    <div class="course-card-info">
+                      <div class="course-card-info-image">
+                        <img src="images/course_img.png" />
+                      </div>
+                      <div class="course-card-info-content">
+                        <div class="course-card-info-content-tag">
+                          <p>一年級</p>
+                          <p>45 mins</p>
+                          <p>CCSS</p>
+                          <p>一對四</p>
+                        </div>
+                        <p class="course-card-info-content-text">
+                          Conversation About: Meeting New People
+                        </p>
+                        <div class="course-card-info-content-teacher">
+                          <div class="course-card-info-content-teacher-avatar">
+                            <img src="images/teacher_img.png" />
+                          </div>
+                          <p class="course-card-info-content-teacher-name">
+                            Karla C
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="course-card-action">
+                      <button class="button xs">
+                        <img class="button-icon" src="images/btn_hw.svg" />
+                        <p>課後作業</p>
+                      </button>
+                      <button class="button xs">
+                        <img class="button-icon" src="images/btn_review.svg" />
+                        <p>複習課程</p>
+                      </button>
+                      <button class="button s">
+                        <img class="button-icon" src="images/btn_again.svg" />
+                        <p>再學一次</p>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="course dark">
+                  <div class="course-info">
+                    <div class="course-info-content">
+                      <div class="course-info-content-status">
+                        <div class="course-info-content-status-check">
+                          <img src="images/check.svg" />
+                        </div>
+                        <p class="course-info-content-status-text">已出席</p>
+                      </div>
+                      <div class="course-info-content-time">
+                        <p class="date">2021/9/18</p>
+                        <p class="time">18:30</p>
+                      </div>
+                    </div>
+                    <div class="course-info-divider"></div>
+                  </div>
+                  <div class="course-card">
+                    <div class="course-card-info">
+                      <div class="course-card-info-image">
+                        <img src="images/course_img.png" />
+                      </div>
+                      <div class="course-card-info-content">
+                        <div class="course-card-info-content-tag">
+                          <p>一年級</p>
+                          <p>45 mins</p>
+                          <p>CCSS</p>
+                          <p>一對四</p>
+                        </div>
+                        <p class="course-card-info-content-text">
+                          Conversation About: Meeting New People
+                        </p>
+                        <div class="course-card-info-content-teacher">
+                          <div class="course-card-info-content-teacher-avatar">
+                            <img src="images/teacher_img.png" />
+                          </div>
+                          <p class="course-card-info-content-teacher-name">
+                            Karla C
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="course-card-action">
+                      <button class="button xs">
+                        <img class="button-icon" src="images/btn_hw.svg" />
+                        <p>課後作業</p>
+                      </button>
+                      <button class="button xs">
+                        <img class="button-icon" src="images/btn_review.svg" />
+                        <p>複習課程</p>
+                      </button>
+                      <button class="button s">
+                        <img class="button-icon" src="images/btn_again.svg" />
+                        <p>再學一次</p>
+                      </button>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
