Update carousel icon

--- a/my_class.html
+++ b/my_class.html
@@ -443,8 +443,8 @@
             <span class="lesson-title">9月課程</span>
             <!-- carousel -->
             <div class="lesson-carousel">
-              <div class="lesson-carousel-icon previous"></div>
-              <div class="lesson-carousel-icon next"></div>
+              <div class="carousel-icon previous"></div>
+              <div class="carousel-icon next"></div>
             </div>
 
             <!-- lesson-unit -->
