Update story image parts

--- a/my_class.html
+++ b/my_class.html
@@ -768,6 +768,12 @@
               </div>
             </div>
             <div class="story-content">
+              <div class="story-content-image image01">
+                <img src="images/toy04.svg" />
+              </div>
+              <div class="story-content-image image02">
+                <img src="images/toy05.svg" />
+              </div>
               <div
                 class="story-content-carousel carousel-icon sm previous"
               ></div>
