--- a/my_class_schedule.html
+++ b/my_class_schedule.html
@@ -417,6 +417,24 @@
               </div>
             </div>
           </div>
+          <div class="schedule">
+            <div class="schedule-top">
+              <img src="images/icon-1.svg" />
+            </div>
+            <div class="schedule-wrapper">
+              <div class="schedule-item">
+                <div class="schedule-item-header">
+                  <p>2021/9/12 星期日</p>
+                </div>
+                <div class="schedule-item-course">
+                  <div class="schedule-item-course-left">
+                    <p>13:30</p>
+                    <div class="schedule-item-course-left-divider"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="right">
           <!-- tab -->
@@ -464,6 +482,9 @@
               <div class="carousel-icon md previous"></div>
               <div class="carousel-icon md next"></div>
               <div class="lesson-carousel-content">
+                <div class="lesson-carousel-content-item">
+                  <p>上個月</p>
+                </div>
                 <div class="lesson-carousel-content-unit">
                   <div class="lesson-carousel-content-unit-item active">
                     <div class="lesson-carousel-content-unit-item-dot"></div>
@@ -484,6 +505,9 @@
                     <div class="lesson-carousel-content-unit-item-dot"></div>
                     <p class="lesson-carousel-content-unit-item-text">Unit 4</p>
                   </div>
+                </div>
+                <div class="lesson-carousel-content-item">
+                  <p>下個月</p>
                 </div>
               </div>
             </div>
@@ -774,72 +798,102 @@
                 class="story-content-carousel carousel-icon sm previous"
               ></div>
               <div class="story-content-carousel carousel-icon sm next"></div>
-              <div class="story-course-wrapper">
-                <div class="story-course">
-                  <div class="story-course-image">
-                    <img src="images/toy03.png" />
-                  </div>
-                  <div class="story-course-card">
-                    <div class="story-course-card-info">
-                      <p class="story-course-card-info-time">2021/9/14 13:30</p>
-                      <p class="story-course-card-info-name">
-                        Conversation About: Meeting New People
-                      </p>
-                      <div class="story-course-card-teacher">
-                        <p class="story-course-card-teacher-name">Karla C</p>
-                        <div class="story-course-card-teacher-avatar">
-                          <img src="images/teacher_img.png" />
-                        </div>
+              <div class="story-course">
+                <div class="story-course-image">
+                  <img src="images/toy03.png" />
+                </div>
+                <div class="story-course-card">
+                  <div class="story-course-card-info">
+                    <p class="story-course-card-info-time">2021/9/14 13:30</p>
+                    <p class="story-course-card-info-name">
+                      Conversation About: Meeting New People
+                    </p>
+                    <div class="story-course-card-teacher">
+                      <p class="story-course-card-teacher-name">Karla C</p>
+                      <div class="story-course-card-teacher-avatar">
+                        <img src="images/teacher_img.png" />
                       </div>
                     </div>
-                    <div class="story-course-card-image">
-                      <img src="images/course_img.png" />
-                    </div>
-                    <div class="story-course-card-tag">
-                      <p>一年級</p>
-                      <p>45 mins</p>
-                      <p>CCSS</p>
-                      <p>一對四</p>
-                    </div>
-                    <button class="button lg">
-                      <img class="button-icon" src="images/btn_booking.svg" />
-                      <p>預定課程</p>
-                    </button>
                   </div>
+                  <div class="story-course-card-image">
+                    <img src="images/course_img.png" />
+                  </div>
+                  <div class="story-course-card-tag">
+                    <p>一年級</p>
+                    <p>45 mins</p>
+                    <p>CCSS</p>
+                    <p>一對四</p>
+                  </div>
+                  <button class="button lg">
+                    <img class="button-icon" src="images/btn_booking.svg" />
+                    <p>預定課程</p>
+                  </button>
                 </div>
               </div>
-              <div class="story-course-wrapper">
-                <div class="story-course">
-                  <div class="story-course-image">
-                    <img src="images/toy03.png" />
-                  </div>
-                  <div class="story-course-card">
-                    <div class="story-course-card-info">
-                      <p class="story-course-card-info-time">2021/9/14 13:30</p>
-                      <p class="story-course-card-info-name">
-                        Conversation About: Meeting New People
-                      </p>
-                      <div class="story-course-card-teacher">
-                        <p class="story-course-card-teacher-name">Karla C</p>
-                        <div class="story-course-card-teacher-avatar">
-                          <img src="images/teacher_img.png" />
-                        </div>
+
+              <div class="story-course">
+                <div class="story-course-image">
+                  <img src="images/toy03.png" />
+                </div>
+                <div class="story-course-card">
+                  <div class="story-course-card-info">
+                    <p class="story-course-card-info-time">2021/9/14 13:30</p>
+                    <p class="story-course-card-info-name">
+                      Conversation About: Meeting New People
+                    </p>
+                    <div class="story-course-card-teacher">
+                      <p class="story-course-card-teacher-name">Karla C</p>
+                      <div class="story-course-card-teacher-avatar">
+                        <img src="images/teacher_img.png" />
                       </div>
                     </div>
-                    <div class="story-course-card-image">
-                      <img src="images/course_img.png" />
-                    </div>
-                    <div class="story-course-card-tag">
-                      <p>一年級</p>
-                      <p>45 mins</p>
-                      <p>CCSS</p>
-                      <p>一對四</p>
-                    </div>
-                    <button class="button lg">
-                      <img class="button-icon" src="images/btn_booking.svg" />
-                      <p>預定課程</p>
-                    </button>
                   </div>
+                  <div class="story-course-card-image">
+                    <img src="images/course_img.png" />
+                  </div>
+                  <div class="story-course-card-tag">
+                    <p>一年級</p>
+                    <p>45 mins</p>
+                    <p>CCSS</p>
+                    <p>一對四</p>
+                  </div>
+                  <button class="button lg">
+                    <img class="button-icon" src="images/btn_booking.svg" />
+                    <p>預定課程</p>
+                  </button>
+                </div>
+              </div>
+
+              <div class="story-course">
+                <div class="story-course-image">
+                  <img src="images/toy03.png" />
+                </div>
+                <div class="story-course-card">
+                  <div class="story-course-card-info">
+                    <p class="story-course-card-info-time">2021/9/14 13:30</p>
+                    <p class="story-course-card-info-name">
+                      Conversation About: Meeting New People
+                    </p>
+                    <div class="story-course-card-teacher">
+                      <p class="story-course-card-teacher-name">Karla C</p>
+                      <div class="story-course-card-teacher-avatar">
+                        <img src="images/teacher_img.png" />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="story-course-card-image">
+                    <img src="images/course_img.png" />
+                  </div>
+                  <div class="story-course-card-tag">
+                    <p>一年級</p>
+                    <p>45 mins</p>
+                    <p>CCSS</p>
+                    <p>一對四</p>
+                  </div>
+                  <button class="button lg">
+                    <img class="button-icon" src="images/btn_booking.svg" />
+                    <p>預定課程</p>
+                  </button>
                 </div>
               </div>
             </div>
